--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,6 +64,21 @@
     <string name="Txt_selec_ubicacion">Seleccione ubicación</string>
     <string name="Btn_listo">Listo</string>
 
+    <string name="Tv_locacion">Elija una locación</string>
+    <string name="Et_buscar">Buscar </string>
+    <string name="Txt_categoria">Categorias</string>
+    <string name="Tv_categoria">Categoría</string>
+
+    <string name="Tv_titulo">Nombre del producto</string>
+    <string name="Tv_descripcion">Descripción del producto, se podrá visualizar un máximo de 3 líneas</string>
+    <string name="Tv_direccion">Dirección</string>
+    <string name="Tv_condicion">Nuevo</string>
+    <string name="Tv_simbolo_precio">COP/</string>
+    <string name="Tv_precio">00</string>
+    <string name="Tv_fecha">dd/MM/yyyy</string>
+
+
+
 
 
     <!-- TODO: Remove or change this placeholder text -->
